<resources>
    <string name="app_name">DaviPay</string>
    <string name="facebook_app_id">631326240376633</string>
    <string name="google_maps_api_key">AIzaSyDprT-uMwe012dmqLQ3RiisRj82ujcK4VA</string>
    <string name="id_type_hint">Tipo de documento</string>
    <string name="id_number_hint">Número de documento</string>
    <string name="login_password_hint">Clave virtual o clave personal</string>
    <string name="login_token_password_hint">Clave virtual o clave personal</string>
    <string name="login_button_text">Ingresar</string>
    <string name="login_forgot_password_button_text">¿Olvidó o bloqueó su clave?</string>
    <string name="login_validate_token_button_text">Continuar</string>
    <string name="login_token_hint">Ingresar Token</string>
    <string name="login_token_activity_title">TOKEN</string>
    <string name="token_login_header">Header</string>
    <string name="main_activity_title">DAVIPAY</string>
    <string name="logout_button_text">LOGOUT</string>
    <string name="facebook_login_token_activity_title">CONECTAR CON FACEBOOK</string>
    <string name="facebook_login_teaser">¿Autoriza a Facebook para utilizar su cuenta?</string>
    <string name="facebook_login_button_text">Conectar con Facebook</string>
    <string name="facebook_login_without_facebook_button">Continuar sin conectar con Facebook</string>
    <string name="country_hint">País</string>
    <string name="confirmation_activity_subtitle">Queremos ratificar con usted sus datos de contacto para mantenerlo informado de todos sus movimientos en la APP.</string>
    <string name="login_confirmation_error_message_empty_email">Debe ingresar un email</string>
    <string name="login_confirmation_error_message_invalid_email">El email ingresado debe ser válido</string>
    <string name="login_confirmation_error_message_empty_phone">Debe ingresar un número de celular</string>
    <string name="login_confirmation_error_message_wrong_phone">El celular ingresado debe ser válido</string>
    <string name="login_confirmation_activity_title">CONFIRMACIÓN DE DATOS</string>
    <string name="ecard_login_activity_title">SOLICITAR eCARD</string>
    <string name="ecard_login_activity_text_1">¿NO TIENE TARJETA DE CRÉDITO?\nSOLICITE SU E-CARD</string>
    <string name="ecard_login_activity_text_2">¿No tiene tarjeta de crédito?\n\nUse su eCard y pague con tranquilidad. Haga clic en el "+" para solicitar su eCard.</string>
    <string name="ecard_login_continue_without">OMITIR</string>
    <string name="birthday_hint">Fecha de nacimiento</string>
    <string name="celphone_hint">Celular</string>
    <string name="email_hint">E-mail</string>
    <string name="continue_button_text">Continuar</string>
    <string name="registration_error_message_empty_birthday">Debe ingresar su fecha de cumpleaños</string>
    <string name="accept_button_text">Aceptar</string>
    <string name="cancel_button_text">Cancelar</string>
    <string name="login_help_dialog_title">ASIGNACIÓN</string>
    <string name="login_help_dialog_subtitle">DE CLAVE VIRTUAL</string>
    <string name="login_help_dialog_text">Para asignar su clave virtual, deje este campo en blanco y de clic en el botón Ingresar.</string>
    <string name="account_activation_activity_title">ACTIVACIÓN</string>
    <string name="account_activation_explanation_text">Ingrese el código de activación que\nle hemos enviado vía SMS</string>
    <string name="account_activation_incomplete_code_error">El código ingresado debe tener 4 dígitos</string>
    <string name="account_activation_request_code_button">SOLICITAR NUEVAMENTE EL CÓDIGO</string>
    <string name="account_activation_code_resend_text">Reenviando código</string>
    <string name="resend_validation_code_text">INGRESE EL CÓDIGO DE ACTIVACIÓN QUE\nLE HEMOS ENVIADO VÍA SMS</string>
    <string name="policy_picker_check_box_send_sms">Envío de SMS</string>
    <string name="politcy_picker_check_box_send_email">Envío de E-mails</string>
    <string name="policy_picker_check_box_phone_contact">Contacto Telefónico</string>
    <string name="policy_picker_check_box_terms_and_conditions_ecard">Términos y condiciones eCard</string>
    <string name="policy_picker_check_box_terms_and_conditions"><u>Términos y condiciones</u></string>
    <string name="policy_picker_check_box_privacy_policy"><u>Políticas de Privacidad</u></string>
    <string name="policy_picker_subtitle">Para tener una mejor experiencia,\nconfírmenos por cuáles medios desea recibir\ncomunicaciones de la aplicación y acepte\nTérminos y Condiciones, y Políticas de Privacidad.</string>
    <string name="policy_picker_title">AUTORIZACIÓN USO DE DATOS</string>
    <string name="policy_picker_terms_and_conditions_not_checked_error">Debe aceptar los términos y condiciones</string>
    <string name="policy_picker_privacy_policy_not_checked_error">Debe aceptar la política de privacidad</string>
    <string name="interests_picker_title">INTERESES</string>
    <string name="assign_password_title">ASIGNAR CLAVE</string>
    <string name="change_password_title">ASIGNAR O CAMBIAR CLAVE</string>
    <string name="change_password_input_error_title">DATOS</string>
    <string name="change_password_input_error_subtitle">INVÁLIDOS</string>
    <string name="change_password_step_2_input_error_text">Verifique los datos ingresados.</string>
    <string name="change_password_step_1_id_type_hint">TIPO DE IDENTIFICACIÓN</string>
    <string name="change_password_step_1_id_hint">NÚMERO DE IDENTIFICACIÓN</string>
    <string name="change_password_step_1_empty_id_number_error">Debe ingresar su número de identificación</string>
    <string name="change_password_step_2_debit_card_last_numbers">4 últimos números tarjeta débito</string>
    <string name="change_password_step_2_atm_password">Clave de cajero automático</string>
    <string name="change_password_step_2_bank_product_number">4 últimos números del producto</string>
    <string name="change_password_step_2_empty_card_digits_error">Debe ingresar los 4 últimos dígitos de su tarjeta</string>
    <string name="change_password_step_2_empty_bank_product_error">Debe seleccionar un producto</string>
    <string name="change_password_step_2_empty_bank_product_number_error">Debe ingresar el número de producto</string>
    <string name="change_password_step_2_incomplete_card_digits_error">Los números de su tarjeta debe ser de 4 dígitos</string>
    <string name="change_password_step_2_empty_atm_password_error">Debe ingresar la contraseña de su cajero automático</string>
    <string name="change_password_step_3_old_virtual_password">Clave virtual actual</string>
    <string name="change_password_step_3_new_virtual_password">Nueva clave virtual</string>
    <string name="change_password_step_3_repeat_virtual_password">Confirme su nueva clave virtual</string>
    <string name="change_password_step_3_subtitle_hint">Al hacer clic en Continuar, le enviaremos un Código de Confirmación a su celular registrado con nosotros.</string>
    <string name="change_password_step_3_help_icon_content_desc">Ícono a ayuda</string>
    <string name="change_password_step_3_empty_old_virtual_password_error">Debe ingresar su clave virtual actual</string>
    <string name="change_password_step_3_empty_virtual_password_error">Verifique los datos ingresados.</string>
    <string name="change_password_step_3_empty_password_repeat_error">Verifique los datos ingresados.</string>
    <string name="change_password_step_3_password_repeat_error">Los datos ingresados no coinciden.</string>
    <string name="change_password_step_2_product_help_text">Son los 4 últimos números del producto seleccionado.</string>
    <string name="change_password_step_2_last_card_digits_help_text">Son los 4 últimos números que aparecen en la parte frontal de su Tarjeta Débito.</string>
    <string name="change_password_step_atm_password_help_text">Es la clave para realizar retiros en cajeros automáticos y compras en establecimientos.</string>
    <string name="change_password_bank_product">Seleccione un producto</string>
    <string name="password_confirmation_title">CONFIRMACIÓN</string>
    <string name="password_confirmation_subtitle_hint">Ingrese el Código de Confirmación que hemos enviado\nal celular que tiene registrado con nosotros.\n\nEn caso de no recibir el Código de Confirmación,\ncomuníquese en Bogotá al 338 3838 o a nivel nacional al\n018000 12838.</string>
    <string name="password_confirmation_send_button">Enviar</string>
    <string name="password_confirmation_incomplete_code_error">Debe ingresar el código de confirmación.</string>
    <string name="activated_password_activity_title">ACTIVACIÓN DE CLAVE VIRTUAL</string>
    <string name="activated_password_activity_text">Su Clave Virtual ya está activa,con esta\npodrá ingresar a cualquiera de nuestros\ncanales digitales.\n\nPor su seguridad para algunas\ntransacciones en estos canales, le\nenviaremos un Código de Confirmación\nal celular que tiene registrado con\nnosotros.</string>
    <string name="activated_password_first_line_title">CLAVE</string>
    <string name="activated_password_second_line_title">VIRTUAL ACTIVADA</string>
    <string name="help_dialog_activity_text">Usted debe asignar una clave de 4 a 8 dígitos, que no sean repetidos ni consecutivos.</string>
    <string name="input_data_error_generic_title">ERROR</string>
    <string name="input_data_error_generic_subtitle">EN DATOS INGRESADOS</string>
    <string name="person_id_type_error_text">Debe seleccionar un tipo de documento.</string>
    <string name="person_in_number_error_text">Debe ingresar su número de documento.</string>
    <string name="virtual_password_error_text">Debe ingresar su clave virtual o segunda clave.</string>
    <string name="token_error_text">Debe ingresar su token.</string>
    <string name="generic_service_error_title">ERROR EN</string>
    <string name="generic_service_error_subtitle">LA CONSULTA</string>
    <string name="generic_service_error">Se ha generado un error. Por favor intente más tarde.</string>
    <string name="confirmation_service_error">Código de verificación incorrecto.</string>
    <string name="login_error_message_title">ERROR</string>
    <string name="login_error_message_text">Acceso denegado, verifique los datos ingresados.</string>
    <string name="login_web_password_error_message_title">ACTIVACIÓN</string>
    <string name="login_web_password_error_message_subtitle">DE CLAVE VIRTUAL</string>
    <string name="login_web_password_error_message_text">Para poder ingresar, usted debe activar su clave virtual a través del Call Center</string>
    <string name="login_web_password_phone">+5713383838</string>
    <string name="help_dialog_generic_title">AYUDA</string>
    <string name="help_dialog_title_1">AYUDA</string>
    <string name="help_dialog_title_2">CLAVE VIRTUAL</string>
    <string name="rate_app_dialog_title_1">VALORAR</string>
    <string name="rate_app_dialog_title_2">DAVIPAY</string>
    <string name="rate_app_dialog_text">!Gracias! Nos alegra saber que su\nexperiencia con DaviPay ha sido\nbuena. Sería muy útil contar con sus\ncomentarios y sugerencias.</string>
    <string name="rate_app_dialog_cancel_button">NO, GRACIAS</string>
    <string name="rate_app_dialog_remember_later_button">RECORDÁRMELO MÁS TARDE</string>
    <string name="rate_app_dialog_rate_button">VALORAR DAVIPAY</string>
    <string name="invalid_session_title">ERROR</string>
    <string name="invalid_session_subtitle">SESIÓN INVÁLIDA</string>
    <string name="invalid_session_text">Por favor ingrese sus credenciales para continuar operando.</string>
    <string name="set_virtual_password_error_text">Debe asignar una clave virtual para acceder.</string>
    <string name="my_cards_cancel_button_text">Cancelar</string>
    <string name="my_cards_pay_button_text">Continuar</string>
    <string name="login_dialog_title">INGRESE</string>
    <string name="login_dialog_subtitle">SU CLAVE</string>
</resources>