<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outside"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/white_rounded_corners_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        android:paddingTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_app_dialog_title_1"
            android:textColor="@color/red_title_color"
            android:textSize="28dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="@string/rate_app_dialog_title_2"
            android:textColor="@color/darkest_blue_title_color"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/rate_app_dialog_text"
            android:textColor="@color/gray_text_color"
            android:textSize="@dimen/common_text_size" />

        <TextView
            android:id="@+id/rate_app"
            fontPath="fonts/MyriadPro-Semibold.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/button_without_cardview_padding"
            android:layout_marginRight="@dimen/button_without_cardview_padding"
            android:layout_marginTop="@dimen/login_input_margin_top"
            android:background="@drawable/red_button_background"
            android:padding="15dp"
            android:text="@string/rate_app_dialog_rate_button"
            android:textColor="@color/login_button_text_color"
            android:textSize="@dimen/login_input_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/remember_later"
            fontPath="fonts/MyriadPro-Regular.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/button_without_cardview_padding"
            android:layout_marginRight="@dimen/button_without_cardview_padding"
            android:layout_marginTop="15dp"
            android:background="@drawable/white_center_red_border_selector"
            android:gravity="center_vertical|start"
            android:padding="15dp"
            android:text="@string/rate_app_dialog_remember_later_button"
            android:textColor="@color/login_button_color"
            android:textSize="@dimen/login_input_text_size" />

        <TextView
            android:id="@+id/cancel_button"
            fontPath="fonts/MyriadPro-Regular.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/button_without_cardview_padding"
            android:layout_marginRight="@dimen/button_without_cardview_padding"
            android:layout_marginTop="15dp"
            android:background="@drawable/white_center_red_border_selector"
            android:gravity="center_vertical|start"
            android:padding="15dp"
            android:text="@string/rate_app_dialog_cancel_button"
            android:textColor="@color/login_button_color"
            android:textSize="@dimen/login_input_text_size" />

    </LinearLayout>

</RelativeLayout>