<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ImageView
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_layout"
        android:adjustViewBounds="true"
        android:contentDescription="@string/token_login_header"
        android:scaleType="fitXY"
        android:src="@drawable/login_header" />

    <TextView
        fontPath="fonts/MyriadPro-Regular.otf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_layout"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/button_without_cardview_padding"
        android:layout_marginRight="@dimen/button_without_cardview_padding"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:text="@string/policy_picker_subtitle"
        android:textColor="@color/login_input_text_color"
        android:textSize="@dimen/common_text_size" />

    <LinearLayout
        android:id="@+id/checkbox_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_footer"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/login_input_data_margin_bottom"
        android:layout_marginTop="@dimen/login_input_data_margin_top"
        android:gravity="center"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/sms_send"
            fontPath="fonts/MyriadPro-Regular.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:checked="true"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/checkbox_selector"
            android:paddingBottom="@dimen/check_box_padding_top_and_bottom"
            android:paddingEnd="20dp"
            android:paddingStart="30dp"
            android:paddingTop="@dimen/check_box_padding_top_and_bottom"
            android:text="@string/policy_picker_check_box_send_sms"
            android:textColor="@color/checkbox_text_color_selector"
            android:textSize="@dimen/common_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b0b0b0" />

        <CheckBox
            android:id="@+id/email_send"
            fontPath="fonts/MyriadPro-Regular.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:checked="true"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/checkbox_selector"
            android:paddingBottom="@dimen/check_box_padding_top_and_bottom"
            android:paddingEnd="20dp"
            android:paddingStart="30dp"
            android:paddingTop="@dimen/check_box_padding_top_and_bottom"
            android:text="@string/politcy_picker_check_box_send_email"
            android:textColor="@color/checkbox_text_color_selector"
            android:textSize="@dimen/common_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b0b0b0" />

        <CheckBox
            android:id="@+id/phone_contact"
            fontPath="fonts/MyriadPro-Regular.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:checked="true"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/checkbox_selector"
            android:paddingBottom="@dimen/check_box_padding_top_and_bottom"
            android:paddingEnd="20dp"
            android:paddingStart="30dp"
            android:paddingTop="@dimen/check_box_padding_top_and_bottom"
            android:text="@string/policy_picker_check_box_phone_contact"
            android:textColor="@color/checkbox_text_color_selector"
            android:textSize="@dimen/common_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b0b0b0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/check_box_padding_top_and_bottom"
            android:paddingEnd="20dp"
            android:paddingStart="30dp"
            android:paddingTop="@dimen/check_box_padding_top_and_bottom"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/terms_and_conditions"
                fontPath="fonts/MyriadPro-Regular.otf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/checkbox_selector"
                android:text="@string/policy_picker_check_box_terms_and_conditions"
                android:textColor="@color/checkbox_text_color_selector"
                android:textSize="@dimen/common_text_size" />

            <ImageView
                android:id="@+id/terms_and_conditions_button"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:clickable="true"
                android:src="@drawable/information_icon_selector"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b0b0b0" />

        <CheckBox
            android:id="@+id/privacy_policy"
            fontPath="fonts/MyriadPro-Regular.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/checkbox_selector"
            android:paddingBottom="@dimen/check_box_padding_top_and_bottom"
            android:paddingEnd="20dp"
            android:paddingStart="30dp"
            android:paddingTop="@dimen/check_box_padding_top_and_bottom"
            android:text="@string/policy_picker_check_box_privacy_policy"
            android:textColor="@color/checkbox_text_color_selector"
            android:textSize="@dimen/common_text_size" />

        <TextView
            android:id="@+id/send_button"
            fontPath="fonts/MyriadPro-Semibold.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/button_without_cardview_padding"
            android:layout_marginRight="@dimen/button_without_cardview_padding"
            android:layout_marginTop="@dimen/login_input_margin_top"
            android:background="@drawable/red_button_background"
            android:padding="15dp"
            android:text="@string/continue_button_text"
            android:textColor="@color/login_button_text_color"
            android:textSize="@dimen/login_input_text_size"
            android:textStyle="bold" />

    </LinearLayout>


    <ImageView
        android:id="@+id/login_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/login_footer" />

</RelativeLayout>