<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outside"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/white_rounded_corners_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="25dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/login_dialog_title"
            android:textAllCaps="true"
            android:textColor="@color/red_title_color"
            android:textSize="26dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/login_dialog_subtitle"
            android:textAllCaps="true"
            android:textColor="@color/darkest_blue_title_color"
            android:textSize="26dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/help_dialog_activity_text"
            android:textColor="@color/gray_text_color"
            android:textSize="@dimen/common_text_size" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/code_number_background"
            android:gravity="center"
            android:inputType="textPassword"
            android:maxLength="8"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/red_base_color"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/number_code_text_size" />

        <EditText
            android:id="@+id/token_code"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/code_number_background"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/red_base_color"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/number_code_text_size" />

        <TextView
            android:id="@+id/accept_button"
            fontPath="fonts/MyriadPro-Semibold.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/button_without_cardview_padding"
            android:layout_marginRight="@dimen/button_without_cardview_padding"
            android:layout_marginTop="10dp"
            android:background="@drawable/red_button_background"
            android:padding="15dp"
            android:text="@string/my_cards_pay_button_text"
            android:textColor="@color/login_button_text_color"
            android:textSize="@dimen/login_input_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/forgot_password_button"
            fontPath="fonts/MyriadPro-Semibold.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/button_without_cardview_padding"
            android:layout_marginRight="@dimen/button_without_cardview_padding"
            android:layout_marginTop="@dimen/login_input_margin_top"
            android:background="@drawable/white_center_white_button_red_border"
            android:padding="15dp"
            android:text="@string/login_forgot_password_button_text"
            android:textColor="@color/login_button_color"
            android:textSize="@dimen/login_input_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ignore_button"
            fontPath="fonts/MyriadPro-Semibold.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/button_without_cardview_padding"
            android:layout_marginRight="@dimen/button_without_cardview_padding"
            android:layout_marginTop="@dimen/login_input_margin_top"
            android:background="@drawable/white_center_white_button_red_border"
            android:padding="15dp"
            android:text="@string/my_cards_cancel_button_text"
            android:textColor="@color/login_button_color"
            android:textSize="@dimen/login_input_text_size"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>